<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_bold"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/font_italic"
        app:layout_constraintStart_toEndOf="@id/bold"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/size"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="16"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/italic"
        app:layout_constraintBottom_toBottomOf="@id/italic"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_hints"
        android:text="@string/font_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bold" />

    <include
        layout="@layout/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sample"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
